crates/oxc_angular_compiler/tests/snapshots/integration_test__defer_loading_timer_consts_after_i18n_consts.snap
---
source: crates/oxc_angular_compiler/tests/integration_test.rs
expression: js
---
function TestComponent_Defer_3_Template(rf,ctx) {
  if ((rf & 1)) {
    i0.ɵɵtext(0,"\n  ");
    i0.ɵɵelementStart(1,"div");
    i0.ɵɵtext(2,"Deferred content");
    i0.ɵɵelementEnd();
    i0.ɵɵtext(3,"\n");
  }
}
function TestComponent_DeferLoading_4_Template(rf,ctx) {
  if ((rf & 1)) {
    i0.ɵɵtext(0,"\n  ");
    i0.ɵɵelementStart(1,"div");
    i0.ɵɵtext(2,"Loading...");
    i0.ɵɵelementEnd();
    i0.ɵɵtext(3,"\n");
  }
}
function TestComponent_Template(rf,ctx) {
  if ((rf & 1)) {
    i0.ɵɵelementStart(0,"span");
    i0.ɵɵi18n(1,0);
    i0.ɵɵelementEnd();
    i0.ɵɵtext(2,"\n");
    i0.ɵɵdomTemplate(3,TestComponent_Defer_3_Template,4,0)(4,TestComponent_DeferLoading_4_Template,
        4,0);
    i0.ɵɵdefer(5,3,null,4,null,null,1,null,i0.ɵɵdeferEnableTimerScheduling);
    i0.ɵɵdeferOnViewport(null);
    i0.ɵɵdeferPrefetchOnIdle();
  }
}
