crates/oxc_angular_compiler/tests/snapshots/integration_test__for_index_xref_with_i18n_attribute_binding.snap
---
source: crates/oxc_angular_compiler/tests/integration_test.rs
expression: js
---
function TestComponent_For_4_Template(rf,ctx) {
  if ((rf & 1)) { i0.ɵɵtext(0); }
  if ((rf & 2)) {
    const $index_r1 = ctx.$index;
    i0.ɵɵtextInterpolate1(" ",$index_r1," ");
  }
}
function TestComponent_Template(rf,ctx) {
  if ((rf & 1)) {
    i0.ɵɵelementStart(0,"div",0);
    i0.ɵɵtext(1,"text");
    i0.ɵɵelementEnd();
    i0.ɵɵtext(2,"\n");
    i0.ɵɵrepeaterCreate(3,TestComponent_For_4_Template,1,1,null,null,i0.ɵɵrepeaterTrackByIndex);
  }
  if ((rf & 2)) {
    i0.ɵɵadvance(3);
    i0.ɵɵrepeater(ctx.items);
  }
}
